--- a/ClienteWS/Views/Autor/Index.cshtml
+++ b/ClienteWS/Views/Autor/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model IList<GestionBibliotecaMVC.Models.Autor>
+@model IList<CapaLogica.Models.Autor>
 @{
     ViewBag.Title = "Listado de Autores";
     Layout = "~/Views/Shared/_LayoutPage.cshtml";
