--- a/CapaLogica/Views/Editorial/Editorial.cshtml
+++ b/CapaLogica/Views/Editorial/Editorial.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model CapaLogica.Models.Editorial
+@model GestionBibliotecaMVC.Models.Editorial
 @{
 
     Layout = "~/Views/Shared/_LayoutPage.cshtml";
