--- a/CapaLogica/Views/Editorial/Index.cshtml
+++ b/CapaLogica/Views/Editorial/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IList<CapaLogica.Models.Editorial>
+﻿@model IList<GestionBibliotecaMVC.Models.Editorial>
 @{
     ViewBag.Title = "Listado de Editoriales";
     Layout = "~/Views/Shared/_LayoutPage.cshtml";
