--- a/CapaLogica/Views/Ejemplar/Index.cshtml
+++ b/CapaLogica/Views/Ejemplar/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IList<CapaLogica.Models.Ejemplar>
+﻿@model IList<GestionBibliotecaMVC.Models.Ejemplar>
 @{
     ViewBag.Title = "Listado de Ejemplares";
     Layout = "~/Views/Shared/_LayoutPage.cshtml";
