--- a/CapaLogica/Views/Home/Index.cshtml
+++ b/CapaLogica/Views/Home/Index.cshtml
@@ -1,11 +1,7 @@
 ﻿@using CapaLogica.Models
 @model IList<CapaLogica.Models.Libro>
 
-@{
-        ViewBag.Title = MyResources.Resources.Titulo;
-    ViewBag.SubTitle = MyResources.Resources.Titulo;
-    Layout = "~/Views/Shared/_LayoutPage.cshtml";
-}
+
 <section>
     <div class="container-fluid">
         <header><h2>Listado de libros:</h2></header>
@@ -31,11 +27,9 @@
                 <div class="col-lg-4">
                     <label>Autor:</label> @items.Autor.Nombre
                 </div>
-                @if (Request.IsAuthenticated) {
-
-                    <div class="col-lg-4">
+                                   <div class="col-lg-4">
                         @Html.ActionLink("Ver Ejemplares", "Index", "Ejemplar", new {codLibro = @items.CodLibro}, htmlAttributes : new {@class = "btn btn-info"})
-                    </div>}
+                    </div>
             </div>
         </div>
     }
