--- a/CapaLogica/Views/Libro/Index.cshtml
+++ b/CapaLogica/Views/Libro/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IList<CapaLogica.Models.Libro>
+﻿@model IList<GestionBibliotecaMVC.Models.Libro>
 @{
     ViewBag.Title = "Listado de Libros";
     Layout = "~/Views/Shared/_LayoutPage.cshtml";
