--- a/ClienteWS/Views/Prestamo/Index.cshtml
+++ b/ClienteWS/Views/Prestamo/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IList<GestionBibliotecaMVC.Models.Prestamos>
+﻿@model IList<CapaLogica.Models.Prestamos>
 @{
     ViewBag.Title = "Listado de prestamos";
     Layout = "~/Views/Shared/_LayoutPage.cshtml";
