--- a/ClienteWS/Views/Prestamo/Prestamo.cshtml
+++ b/ClienteWS/Views/Prestamo/Prestamo.cshtml
@@ -1,4 +1,4 @@
-﻿@model GestionBibliotecaMVC.Models.Prestamos
+﻿@model CapaLogica.Models.Prestamos
 @{
     ViewBag.Title = "Prestamo";
     Layout = "~/Views/Shared/_LayoutPage.cshtml";
